# conexus

./: .env.example  .gitignore  Cargo.toml  mise.toml
migrations/: 20251010182900_add_bookmarks_table.up.sql
src/: bookmarks.rs  main.rs
